Fix spacing

--- a/style.scss
+++ b/style.scss
@@ -623,14 +623,26 @@ $bp1-filters: 58em;
 .show-images {
 
 	text-align: center;
-	margin-bottom: .5rem;
+	margin-bottom: 0;
 
 	> button {
+
 		background: none;
-		padding: 0;
+		padding: .5rem;
 		color: $brand-color;
 		border: none;
 		font-size: .75em;
+		cursor: pointer;
+
+		&:focus {
+			outline: none;
+			text-decoration: underline;
+		}
+
+	}
+
+	.lazy-loaded & {
+		margin-bottom: .5rem;
 	}
 
 }
